--- a/otp-login/package.json
+++ b/otp-login/package.json
@@ -13,9 +13,13 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "firebase": "^10.7.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.21.2",
+    "react-router-dom": "^6.21.2",
+    "react-toastify": "^10.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
